--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ repositories {
 }
 
 dependencies {
+    compile group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
 
